...
                            .onChange(of: newCarModel.selectedModelIndex) { _ in
                                newCarModel.selectedModel = selectedBrandModels[newCarModel.selectedModelIndex]
                            }
                        }
                    }
                }
                Section(header: Text("Select your car information")) {
                    HStack {
                        Picker("Fuel type", selection: $newCarModel.selectedFuelType) {
                            ForEach(EngineType.allCases, id: \.self) { fuelType in
                                Text(fuelType.rawValue)
                            }
                        }
...
